# raylib-fps

./: .gitignore  CMakeLists.txt
assets/models/: low-poly_ak-47_type_2.glb
src/: embedded_assets.h.in  main.c  smoke_assets.h.in
src/game/: game.c  game.h  models.c  models.h  player.c  player.h
src/game/shoot/: weapon.h  world.c  world.h
